<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>me.topchetoeu.bedwars</groupId>
  <artifactId>bedwars-plugin</artifactId>
  <version>0.7.0</version>

  <name>Bedwars Plugin</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>minecraft-libraries</id>
      <name>Minecraft Libraries</name>
      <url>https://libraries.minecraft.net</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>bukkit</groupId>
      <artifactId>bukkit</artifactId>  
      <version>1.0</version> 
      <scope>system</scope>
      <systemPath>${basedir}/deps/bukkit.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>aaaaaaa</groupId>
      <artifactId>aaaaaaaaa</artifactId>  
      <version>1.0</version> 
      <scope>system</scope>
      <systemPath>${basedir}/deps/server.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>server</groupId>
      <artifactId>server</artifactId>  
      <version>1.0</version> 
      <scope>system</scope>
      <systemPath>${basedir}/deps/datafixerupper.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.mojang</groupId>
      <artifactId>brigadier</artifactId>  
      <version>1.0.18</version> 
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <resources>
        <resource>
            <directory>src</directory>
            <includes>
                <include>**/*.yml</include>
            </includes>
        </resource>
    </resources>
  </build>
</project>
